<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_sign_in_with_email">Sign in with email</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_sign_up">Sign up</string>
    <string name="keyword_show">SHOW</string>
    <string name="or_sign_in">or Sign in</string>
    <string name="or_sign_up">or Sign up</string>
    <string name="prompt_full_name">Full name</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_label">Label</string>
    <string name="text_desc">Description</string>
    <string name="text_value">Value</string>
    <string name="text_select_image">Select image</string>
    <string name="image">image</string>
    <string name="keyword_hide">HIDE</string>
    <string name="signing_in">Signing in</string>
    <string name="error_field_required">Field is required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="login_error_message">Unable to sign in, please retry.</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="email_already_registered">Email address already exist, please try another one</string>
    <string name="signing_up">Signing up</string>
    <string name="pls_retry">Registration failed, please retry</string>
    <string name="empty_state_text">Oops! Your catalog is empty. Click on the floating button to insert a new item entry to the catalog.</string>
    <string name="text_save">Save</string>
    <string name="text_pick_another_image">Pick another image</string>
    <string name="text_sign_out">Sign out</string>
</resources>
